fixed possible contrast issues

--- a/chamber/styles/directory-small.css
+++ b/chamber/styles/directory-small.css
@@ -52,6 +52,14 @@
         
     }
 
+    .weather-info section p,
+    .members-card p,
+    .members-card span,
+    .footer-info p,
+    .footer-info span {
+        color: var(--white-col);
+    }
+
     header img {
         display: block;
         width: 50px;
